--- a/pyproject.toml
+++ b/pyproject.toml
@@ -141,6 +141,7 @@ pymilvus = "2.4.7"
 mysql-connector-python = "8.3.0"
 PyMySQL = "1.1.0"
 ShopifyAPI = "12.7.0"
+janus = "1.0.0"
 
 
 [build-system]
